# gst-voicevox

./: .env  Cargo.toml  README.md
src/: lib.rs
src/tts/: imp.rs  mod.rs
